fix: overflow hidden on radial timers

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1609,3 +1609,7 @@
 .progress-circular--blue__primary {
   stroke: #1248f2;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
